Fixed many bugs in main and file logic Added formating for files Added default config

--- a/CdsConfigurationMigrationDataUnpacker/CdsConfigurationMigrationDataUnpacker.csproj
+++ b/CdsConfigurationMigrationDataUnpacker/CdsConfigurationMigrationDataUnpacker.csproj
@@ -27,4 +27,8 @@ Icon from https://www.freepik.com/</Description>
     </None>
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="XCOPY &quot;$(ProjectDir)ExampleConfig&quot; &quot;$(TargetDir)&quot; /S /Y" />
+  </Target>
+
 </Project>
